fixed issue with horizontal overflow in the mobile version

--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ nav{
   flex-wrap: wrap;
   position: sticky;
   top:0;
-  padding-bottom: 10px;
+  /* padding-bottom: 10px; */
   z-index: 2;
 }
 
@@ -84,6 +84,14 @@ nav li a{
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.root{
+  width:100vw;
+}
+
+.container{
+  width:100%;
 }
 
 /* nav li a.active{
