--- a/src/pages/Projects/index.css
+++ b/src/pages/Projects/index.css
@@ -7,6 +7,28 @@
     gap:4em;
 }
 
+.page-title{
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+    background-color: black;
+    color:var(--dominant-colour);
+    padding: 0;
+}
+
+.page-title h1{
+    display: inline;
+    color:var(--dominant-colour);
+    margin:0;
+}
+
+.page-title h2{
+    display: inline;
+    margin: 0;
+}
+
+
+
 @media screen and (min-width:1280px) {
     .projects.container{
         display: flex;
